// Copyright (c) Microsoft Corporation.
// Licensed under the MIT license.
// SPDX-License-Identifier: MIT

syntax = "proto3";

package async_rpc.v1.request;

service Request {
    rpc Ask (AskRequest) returns (AskResponse);
    rpc Notify (NotifyRequest) returns (NotifyResponse);
}

message AskRequest {
   string respond_uri = 1;
   string request_id = 2;
   string payload = 3;
}

message AskResponse {
}

message NotifyRequest {
   string payload = 1;
}

message NotifyResponse {
}