// Copyright (c) Microsoft Corporation.
// Licensed under the MIT license.
// SPDX-License-Identifier: MIT

syntax = "proto3";

package async_rpc.v1.respond;

service Respond {
    rpc Answer (AnswerRequest) returns (AnswerResponse);
}

message AnswerRequest {
    string request_id = 1;
    string payload = 2;
}

message AnswerResponse {
}